mxob (unknowo) UNRELEASED; urgency=medium

  * Added changelog. 
  * Set up initial translation documents
  * Added 11 translations of mxob-help 
  * Provided translation mechanism of menu.xml

 -- Jerry3904 <mxdevs@mx>  Thu, 05 Dec 2024 12:44:01 -0500