@@ -16,6 +16,7 @@ File manager,Datei-Manager
 Keys,Tasten
 Leave,Verlassen
 Log Out,Abmelden
+Menu,Menü
 Monitors,Monitore
 First Aid,Erste Hilfe
 MX Tools,MX-Werkzeuge
